[tool.poetry]
name = "szalinski"
version = "0.1.0"
description = "An URL shortener"
authors = ["Gonzalo Sanchez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
asyncio = "^3.4.3"
SQLAlchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
