[tool.poetry]
name = "szalinski"
version = "0.1.0"
description = "An URL shortener"
authors = ["Gonzalo Sanchez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
redis = {extras = ["hiredis"], version = "^4.5.5"}
dependency-injector = "^4.41.0"
motor = "^3.1.2"
python-dotenv = "^1.0.0"
urllib3 = "1.26.15"
gunicorn = "^20.1.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.3.1"
locust = "^2.15.1"
faker = "^18.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
color = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
